--- a/app.css
+++ b/app.css
@@ -73,46 +73,56 @@ h1{
     color:black;
 }
 
-/*CHATGPT*/
+
+
+/*card container innen ------------------------------------------*/
 .card-container {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: wrap; /*képernyő szélén töri*/
     justify-content: center;
-    align-items: end;
-    
+    align-items: end;  
 }
-  
-.card {
+
+.image {
     width: 200px; /* szélesség */
     height: auto; /* magasság */
     margin: 0px 3px 0px 3px; /*minden irányba rés*/
     object-fit: contain; /* igazítás*/
     border: 2px solid black; /* Fekete szegély hozzáadása */
 }
-/*ideáig*/
+
+.header-container{
+    display: flex;
+}
 
 .name{
-    width: 200px; /* szélesség */
+    width: 140px; /* szélesség */
     height: auto; /* magasság */
-    margin: 10px 3px 0px 3px; /*minden irányba rés*/
+    margin: 10px 0px 0px 3px; /*minden irányba rés - fel job le bal*/
     padding-top: 5px;
-    object-fit: contain; /* igazítás*/
     color: azure;
     background-color: rgb(39, 40, 40);
     
     border-left: 2px solid rgb(255, 255, 255);
-    border-right: 2px solid rgb(255, 255, 255);
+    border-right: none;
     border-top: 2px solid rgb(255, 255, 255);
     border-bottom: none;
+
+    overflow: hidden; /* A túlcsorduló tartalom elrejtése */
+    white-space: nowrap; /* A szöveg több sorba törésének megakadályozása */
+    text-overflow: ellipsis; /* Túlcsorduló szöveg esetén "..." megjelenítése */
+
+    text-align: left;
+    padding-left: 10px;
 }
 
 .series-name{
-    width: 200px; /* szélesség */
+
+    width: 190px; /* szélesség */
     height: auto; /* magasság */
     font-size: 12.5px;
     margin: 0px 3px 0px 3px; /*minden irányba rés*/
     padding-bottom: 5px;
-    object-fit: contain;  /*igazítás*/
     color: rgb(133, 243, 255);
     background-color: rgb(39, 40, 40);
     
@@ -120,4 +130,29 @@ h1{
     border-right: 2px solid rgb(255, 255, 255);
     border-top: none;
     border-bottom: 2px solid rgb(255, 255, 255);
+
+    overflow: hidden; /* A túlcsorduló tartalom elrejtése */
+    white-space: nowrap; /* A szöveg több sorba törésének megakadályozása */
+    text-overflow: ellipsis; /* Túlcsorduló szöveg esetén "..." megjelenítése */
+
+    text-align: left;
+    padding-left: 10px;
+
+}
+
+.rarity{
+    
+    width: 50px; /* szélesség */
+    height: auto; /* magasság */
+    margin: 10px 3px 0px 0px; /*minden irányba rés*/
+    padding-top: 5px;
+    color: red;
+    background-color: rgb(39, 40, 40);
+    
+    border-left: none;
+    border-right: 2px solid rgb(255, 255, 255);
+    border-top: 2px solid rgb(255, 255, 255);
+    border-bottom: none;
+
+    text-align: center;
 }
