--- a/app.css
+++ b/app.css
@@ -105,6 +105,14 @@ h1{
     --card-innerheader-color: rgb(40, 40, 40);      /*rgb(40, 40, 40)*/
 }
 
+.set-fullname{
+    text-shadow: 2px 0px 5px rgb(255, 255, 255); 
+    font-size: xx-large; 
+    font-weight: bold;
+    margin-top: 10px;
+    text-align: center;
+}
+
 .title-text {
     margin-left: auto;
     padding-left: 35px;
@@ -112,6 +120,8 @@ h1{
 
 .collapse-button {
     margin-left: auto;
+    margin-right: 5px;
+    
 }
 
 .set-title{
@@ -123,8 +133,9 @@ h1{
     font-weight: bold;
     background-color: white;
     text-shadow: 2px 0px 2px greenyellow;
+    border: 2px solid rgb(0, 0, 0);
     align-content: center; 
-    margin: 40px 0 0 0;
+    margin: 10px 10px 0px 10px;
 
     flex-basis: 100%
 }
