--- a/app.css
+++ b/app.css
@@ -106,11 +106,25 @@ h1{
 }
 
 .set-fullname{
-    text-shadow: 2px 0px 5px rgb(255, 255, 255); 
+    display: flex;
+    align-items: center;
+
+    flex-basis: 100%
+}
+
+.fullname{
+    text-shadow: 1px 1px 0 rgb(189, 189, 189), 
+                 -1px -1px 0 rgb(189, 189, 189), 
+                 1px -1px 0 rgb(189, 189, 189), 
+                 -1px 1px 0 rgb(189, 189, 189); /* Minden irányban egy pixel vastag, fekete árnyékolás */
+    color: black;
     font-size: xx-large; 
     font-weight: bold;
     margin-top: 10px;
     text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .title-text {
